    * Conary now supports files whose compressed contents are more than
      4 gig in size. Old versions of Conary will report an error saying
      that "assert(subMagic == SUBFILE_MAGIC)" failed (CNY-1572).
    * Redirects with multiple targets can now be built and installed
      (CNY-1554)
    * Use explicit commit lock to prevent overlapping updates and rollbacks
      (CNY-1591)

  o Bug Fixes:
    * During a cvc update, new files in the source component could result
      in user/group warnings (CNY-763)

Changes in 1.1.24:
  o New Feature:
    * Conary 1.1.24 introduces the framework needed to implement a new
      metadata design for Conary.  The new metadata feature allows
      various information such as description to be set for a trove.
      New XML-RPC interfaces, getNewTroveInfo() and setTroveInfo(),
      have been added to facilitate mirroring metadata.
      addMetadataItems() has been added to allow metadata to be added
      to a trove after it has been built. (CNY-1577)

  o Client Changes:
    * The Conary client now distinguishes between an upstream Conary
      proxy and a plain HTTP proxy. This is so we can properly handle
      SSL traffic through an HTTP proxy using the CONNECT HTTP method.
      As such, there is now a "conaryProxy" configuration variable, in
      addition to the "proxy" variable. (CNY-1550)
    * The "proxy" (and newly introduced "conaryProxy") variables can
      be turned off by setting them to "None". (CNY-1378)
    * Clients requesting the inclusion of configuration files residing
      on the network now upload their version. This opens up the
      possibility for the server to serve different configuration
      files to different client generations. (CNY-1588)
    * Configuration variables "localRollbacks" and "pinTroves" get
      used as defaults when applying an update job; they can be
      explicitly overridden. (CNY-1583)

  o Bug Fixes: